@@ -82,6 +82,7 @@ PROJ_HEAD(moll, "Mollweide")
 PROJ_HEAD(murd1, "Murdoch I")
 PROJ_HEAD(murd2, "Murdoch II")
 PROJ_HEAD(murd3, "Murdoch III")
+PROJ_HEAD(natearth, "Natural Earth")
 PROJ_HEAD(nell, "Nell")
 PROJ_HEAD(nell_h, "Nell-Hammer")
 PROJ_HEAD(nicol, "Nicolosi Globular")
